--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yashil Busa",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3"
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.3",
+    "express-session": "^1.18.0",
+    "mongoose": "^8.2.2"
   }
 }
